--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tilemantle",
-  "version": "1.2.0",
+  "name": "@conorpai/tilemantle",
+  "version": "1.3.0",
   "description": "Utility to warm up your tile server's cache",
   "main": "index.js",
   "scripts": {
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/naturalatlas/tilemantle.git"
+    "url": "https://github.com/conorpai/tilemantle.git"
   },
   "keywords": [
     "map",
@@ -22,11 +22,11 @@
   "author": "Brian Reavis <brian@naturalatlas.com>",
   "license": "Apache License v2.0",
   "bugs": {
-    "url": "https://github.com/naturalatlas/tilemantle/issues"
+    "url": "https://github.com/conorpai/tilemantle/issues"
   },
-  "homepage": "https://github.com/naturalatlas/tilemantle",
+  "homepage": "https://github.com/conorpai/tilemantle",
   "dependencies": {
-    "@mapbox/tile-cover": "^3.0.2",
+    "@conorpai/tile-cover": "*",
     "@turf/turf": "^5.1.3",
     "async": "^2.6.0",
     "chalk": "0.5.1",
@@ -40,5 +40,8 @@
   "devDependencies": {
     "chai": "^1.10.0",
     "mocha": "^4.0.1"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
