--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,11 +10,13 @@
             "name": "启动程序",
             "program": "${workspaceFolder}/bin/tilemantle.js",
             "args": [
-                "http://localhost:8099/3159aeb7-8963-420b-aafc-7c9514c98d41/{z}/{x}/{y}/tile.png",
-                "--extent=60,72,15,135",
+                "http://localhost:9099/b4f01f61-59f3-474f-a35a-a40bbb5817e5/{z}/{x}/{y}/tile.png",
+                "--extent=80.2873327501066,18.4909747501849,134.447191377081,52.5880440001308",
                 "-z=0-5",
-                "--s=1"
-            ]
+                "--s=1",
+                "--P=localhost,5432,lydb,postgres,dlwy,userdata.shpimport_quanguo_4028800483630"
+            ],
+            "console":"externalTerminal"
         }
     ]
 }
